--- a/app/src/main/res/layout/activity_add_property_three.xml
+++ b/app/src/main/res/layout/activity_add_property_three.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AddPropertyTwoActivity">
+    tools:context=".activity.add_property.AddPropertyTwoActivity">
     <LinearLayout
         android:id="@+id/linear_layout_1"
         android:layout_width="match_parent"
