--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MyFovritesActivity">
+    tools:context=".activity.user.MyFovritesActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout_nine"
