--- a/app/src/main/res/layout/activity_screen_thirteen.xml
+++ b/app/src/main/res/layout/activity_screen_thirteen.xml
@@ -40,13 +40,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/slider_image"
-            app:placeholder="@drawable/image_3"
             android:layout_width="match_parent"
-            app:error_image="@drawable/image_13"
-            android:layout_height="170dp"
-            app:delay="1000"
-            app:period="1000"
-            app:corner_radius="2">
+            android:layout_height="170dp">
 
         </com.denzcoskun.imageslider.ImageSlider>
 
@@ -110,16 +105,18 @@
         app:layout_constraintBottom_toTopOf="@id/viewpager13"
         android:background="@color/black">
     </View>
-   <androidx.viewpager.widget.ViewPager
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/viewpager13"
-       android:layout_marginTop="8dp"
-       app:layout_constraintTop_toBottomOf="@id/view13"
-       app:layout_constraintLeft_toLeftOf="parent"
-       app:layout_constraintRight_toRightOf="parent">
 
-   </androidx.viewpager.widget.ViewPager>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager13"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view13"
+        tools:ignore="SpeakableTextPresentCheck">
+
+    </androidx.viewpager.widget.ViewPager>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
